--- a/src/ToHeaven/LoginPage.form
+++ b/src/ToHeaven/LoginPage.form
@@ -3,7 +3,7 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <Properties>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[700, 500]"/>
+      <Dimension value="[800, 500]"/>
     </Property>
   </Properties>
   <Events>
@@ -65,7 +65,7 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jLoginText" max="32767" attributes="0"/>
-              <EmptySpace min="-2" pref="78" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jTextFieldUsername" min="-2" pref="32" max="-2" attributes="0"/>
                   <Component id="jLabelUsernameText" min="-2" max="-2" attributes="0"/>
@@ -81,7 +81,7 @@
                   <Component id="registerButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
-              <Component id="loginButton" pref="65" max="32767" attributes="0"/>
+              <Component id="loginButton" max="32767" attributes="0"/>
               <EmptySpace min="-2" pref="113" max="-2" attributes="0"/>
           </Group>
       </Group>
