--- a/src/StoreToHeaven/AddProduct.form
+++ b/src/StoreToHeaven/AddProduct.form
@@ -95,7 +95,7 @@
         </Property>
       </Properties>
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_LayoutCodePre" type="java.lang.String" value="JPanel emptyPanel = new JPanel();&#xa;AddWreath wreath = new AddWreath(jPanel1);&#xa;emptyPanel.setBackground(new java.awt.Color(153, 255, 204)); &#xa;showAddProduct.add(emptyPanel, &quot;empty&quot;);&#xa;showAddProduct.add(wreath, &quot;wreath&quot;);"/>
+        <AuxValue name="JavaCodeGenerator_LayoutCodePre" type="java.lang.String" value="JPanel emptyPanel = new JPanel();&#xa;AddWreath wreath = new AddWreath(showAddProduct);&#xa;emptyPanel.setBackground(new java.awt.Color(153, 255, 204)); &#xa;showAddProduct.add(emptyPanel, &quot;empty&quot;);&#xa;showAddProduct.add(wreath, &quot;wreath&quot;);"/>
       </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
